<resources>
    <string name="app_name">EzetapAndroidAssignmen</string>
    <string name="ezetapandroidassignment">Ezetap Android Assignment</string>
    <string name="first_activity_data">First Activity Data</string>
    <string name="api_datas">Api Datas</string>
    <string name="uitype">Uitype</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_no">Enter your phone no</string>
    <string name="please_enter_your_phone_no">Please Enter your phone no</string>
    <string name="submit">Submit</string>
    <string name="hide">Hide</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
</resources>